CatalogController and CSS changes to support autosuggest - add varargs to CatalgoController#render override - make sure autosuggest items are high-contrast

--- a/app/assets/stylesheets/topnav.scss
+++ b/app/assets/stylesheets/topnav.scss
@@ -141,6 +141,13 @@ $navbar-primary-brand-hover-color:           $navbar-primary-active-color !defau
       }
   }
 }
+#autocomplete-popup li {
+  color: $primary-text;	
+  &:hover {
+    background-color:color-contrast($primary);
+    color: $primary;
+  }
+}
 
 @media(min-width: 768px) {
 	#topnavbar .topbarlogo {
